feat: Production-ready AI chatbot with OpenAI integration
Complete rewrite of the application with production features:

Backend Improvements:
- FastAPI with OpenAI GPT models (GPT-3.5, GPT-4, GPT-4 Turbo)
- Rate limiting to prevent API abuse (100 req/min configurable)
- Security headers (HSTS, XSS, frame options)
- Comprehensive error handling and logging
- Input validation with Pydantic
- Health check and status endpoints
- CORS configuration for production

Frontend Updates:
- Modern, responsive chat interface
- Real-time typing indicators
- Model selection (GPT-3.5, GPT-4, GPT-4 Turbo)
- Conversation history management
- Token usage tracking

Deployment Ready:
- Docker support with Dockerfile
- Render deployment (render.yaml)
- Railway deployment (railway.json)
- Vercel deployment (vercel.json)
- Heroku support (Procfile)
- Environment configuration
- Setup verification script

Security Features:
- Rate limiting
- Input sanitization
- Security headers
- Error masking
- Configurable CORS

Documentation:
- Comprehensive README
- API documentation
- Deployment guides
- Environment variables reference

--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,18 @@
-# Render Blueprint specification
-# https://render.com/docs/blueprint-spec
-
 services:
   - type: web
-    name: taskflow-app
-    runtime: node
-    buildCommand: npm install
-    startCommand: npm start
+    name: ai-chatbot
+    env: python
+    region: oregon
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
-      - key: NODE_ENV
+      - key: OPENAI_API_KEY
+        sync: false
+      - key: ENVIRONMENT
         value: production
+      - key: MAX_TOKENS
+        value: 2048
+      - key: RATE_LIMIT_REQUESTS
+        value: 100
+      - key: RATE_LIMIT_PERIOD
+        value: 60
